Major change in saveBatchContacts of contact service, to improve efficiency